--- a/src/app/shop-cart/shop-cart.component.html
+++ b/src/app/shop-cart/shop-cart.component.html
@@ -8,20 +8,20 @@
     <div *ngIf="cart == -1"><br> Cart empty</div>
     <div class="divitem" *ngFor="let item of arrItems">
         <div>
-            <img class="imgItem" src="{{GlobalyPathInto}}/products-imgs/{{item.img}}" alt="">
+            <img class="imgItem" src="{{url}}/prodimages/{{item.img}}" alt="">
         </div>
         <div class="displayItem">
-            <div class="itemName">{{item.product_name}}</div><br>
+            <div class="itemName">{{item.prodname}}</div><br>
             <div class="itemPriceQuantity">
                 <div>{{item.price}} ₪</div>
                 <div>quantity:
-                    <select name="selectQuantity" id="selectQuantity" (change)="changeQuantity($event,item.cart_item_id)">
-                        <option value="{{x+1}}" *ngFor="let i of ' '.repeat(20).split(''), let x = index" [selected]="x+1 == item.quantity">{{x+1}}</option>
+                    <select name="selectQuantity" id="selectQuantity" (change)="editQuant($event,item.id)">
+                        <option value="{{x+1}}" *ngFor="let i of ' '.repeat(20).split(''), let x = index" [selected]="x+1 == item.quant">{{x+1}}</option>
                     </select>
                 </div>
             </div>
         </div>
-        <div class="deleteItem" title="DELETE" (click)="deleteItem(item.cart_item_id)">‎x</div>
+        <div class="deleteItem" title="DELETE" (click)="deleteItem(item.id)">‎x</div>
     </div>
     <div id="totalandbtn">
         <div>Total: {{totalPrice|number}} ₪</div>
