--- a/src/app/shop-categorys/shop-categorys.component.html
+++ b/src/app/shop-categorys/shop-categorys.component.html
@@ -1,36 +1,37 @@
 <div id="categorysSearch">
     <div id="categorys">
-        <div *ngFor="let category of categorys" id="{{category.category_id}}"
-            (click)="changeCategory(category.category_id,category.category_name)" class="category">{{category.category_name}}</div>
+        <div *ngFor="let category of categorys" id="{{category.id}}"
+            (click)="changeCategory(category.id,category.catname)" class="category">{{category.catname}}</div>
     </div>
-    <form id="searchProduct" (submit)="search()">
-        <input type="search" name="search" id="search" [(ngModel)]="theSearch" placeholder="search products">
-        <input type="submit" id="btnSearch" value="S">
-    </form>
+    <!-- <form id="searchProduct" (submit)="search()"> -->
+        <input type="search" name="search" id="search" [(ngModel)]="term" placeholder="search products">
+        <button id="btnSearch" (click)="search()">S</button>
+        <!-- <input type="submit" id="btnSearch" value="S"> -->
+    <!-- </form> -->
 </div>
 <h3 id="messageHere">{{messageHere}}</h3>
 <div *ngIf="categoryProducts" id="catpro">
     
     <div *ngFor="let product of products" class="product" (click)="popupProduct(product)">
-        <img src="{{GlobalyPathInto}}/products-imgs/{{product.img}}" alt="" class="productImg">
+        <img src="{{url}}/prodimages/{{product.img}}" alt="" class="productImg">
         <br>
         <div class="productPrice">{{product.price}} ₪</div>
-        <div>{{product.product_name}}</div>
+        <div>{{product.prodname}}</div>
     </div>
 </div>
 <!-- popup  -->
 <div *ngIf='ifPopup' id="backgroundPopup" (click)='closePopup($event)'>
     <div id="popup">
         <div class="deleteCross" (click)="closePopupCross()">X</div>
-        <img src="{{GlobalyPathInto}}/products-imgs/{{productPopup.img}}" alt="" class="prodimg">
+        <img src="{{url}}/prodimages/{{productPopup.img}}" alt="" class="prodimg">
         <div>
-            <div>{{productPopup.product_name}}</div><br>
+            <div>{{productPopup.prodname}}</div><br>
             <div class="prodPrice">{{productPopup.price}} ₪</div><br>
             <div id="addquantity">
-                Quantity: &nbsp; <button class="plusminus" (click)="changeQuantity('-')">-</button>
-                <div>{{quantity}}</div><button class="plusminus" (click)="changeQuantity('+')">+</button>
+                Quantity: &nbsp; <button class="plusminus" (click)="editQuant('-')">-</button>
+                <div>{{quant}}</div><button class="plusminus" (click)="editQuant('+')">+</button>
             </div><br>
-            <button (click)="addToCart(productPopup.product_id)">Add to cart</button>
+            <button (click)="addToCart(productPopup.prodid)">Add to cart</button>
         </div>
     </div>
 </div>
