--- a/src/app/signup-step2/signup-step2.component.html
+++ b/src/app/signup-step2/signup-step2.component.html
@@ -16,12 +16,12 @@
                 <option value="bne brak">בני ברק</option>
             </select>
         </div><br>
-        <div><label for="adress">Adress</label><input type="text" name="adress" id="adress" formControlName="adress"
+        <div><label for="street">street</label><input type="text" name="street" id="street" formControlName="street"
                 placeholder="ex: בן יהודה 200"></div><br>
-        <div><label for="first_name">First Name</label><input type="text" name="first_name" id="first_name"
-                formControlName="first_name" placeholder="max 20 characters"></div><br>
-        <div><label for="last_name">Last Name</label><input type="text" name="last_name" id="last_name"
-                formControlName="last_name" placeholder="max 20 characters"></div><br>
+        <div><label for="fname">First Name</label><input type="text" name="fname" id="fname"
+                formControlName="fname" placeholder="max 20 characters"></div><br>
+        <div><label for="lname">Last Name</label><input type="text" name="lname" id="lname"
+                formControlName="lname" placeholder="max 20 characters"></div><br>
         <div><input type="submit" value="Submit" [disabled]="!dataStep2.valid"></div>
     </form>
 </div>
