--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,44 +1,46 @@
-<div id="adminpage" *ngIf="ifDisplay">
-<div id="categorysSearch">
-    <div id="categorys">
-        <div *ngFor="let category of categorys" id="{{category.catid}}"
-            (click)="changeCategory(category.id,'Category ' + category.catname)" class="category">{{category.catname}}</div>
-    </div>
-    <!-- <form id="searchProduct" (submit)="search()"> -->
-        <input type="search" name="search" id="search" [(ngModel)]="term" placeholder="search products">
-        <!-- <input type="submit" id="btnSearch" value="S"> -->
-        <button (click)="search()" id="btnSearch">S</button>
-    <!-- </form> -->
-    <div id="addProduct" (click)="openPopupAdd()">+ Add product</div>
-</div>
-<h3 id="messageHere">{{messageHere}}</h3>
-<div *ngIf="categoryProducts" id="catpro">
-    <div *ngFor="let product of products" class="product" >
-        <img src="{{url}}/prodimages/{{product.img}}" alt="" class="productImg">
-        <br>
-        <div class="productPrice">{{product.price}} ₪</div>
-        <div>{{product.prodname}}</div>
-        <button (click)="openPopupAdd(product)" class="btnModify">modify</button>
-    </div>
-</div>
+<mat-toolbar class="d-flex row justify-content-between" class="justify-content-between">
+    <mat-toolbar-row *ngIf="categorys !== 'No results'; else noresults" class="justify-content-between">
+        <div>
+            <button mat-raised-button color="primary" *ngFor="let category of categorys"
+                (click)="changeCategory(category.id,category.catname)" class="ml-1">{{category.catname}}
+            </button>
 
-<div *ngIf='ifPopupAdd' id="backgroundPopup" (click)='closePopupAdd($event)'>
-    <div id="popup">
-        <div class="deleteCross" (click)="closePopupAdd('blah',true)">X</div>
-        <label for="addimg"><img src="{{pathImgPopup}}" alt="" class="prodimg" title="Add Image"><input type="file" name="file" id="addimg" style="display:none;" accept="image/*" (change)="imgFile($event)"></label>
-        <form [formGroup]="newProduct" (ngSubmit)="addProduct()">
-            <div><label for="nameAdd">name: </label><input type="text" id="nameAdd" formControlName="prodname"></div><br>
-            <div><label for="priceAdd">price: </label><input type="number" id="priceAdd" value="" formControlName="price"></div><br>
-            <div>
-                <label for="categoryEditAdd">Category: </label>
-                <select name="categoryEditAdd" id="categoryEdit" formControlName="catid">
-                    <option *ngFor="let category of categorys" value="{{category.id}}">{{category.catname}}</option>
-                </select>
-            </div><br>
-            <br><br>
-            <input *ngIf="!ifModify" type="submit" value="Add New Product" [disabled]="!newProduct.valid">
-            <input *ngIf="ifModify" type="submit" value="Modify Product" [disabled]="!newProduct.valid">
-        </form>
+            <button mat-raised-button color="warn" class="ml-4" (click)="openModal()">Add product</button>
+        </div>
+
+        <mat-form-field style="margin-left: 100px">
+            <input matInput [(ngModel)]="term" (input)="search()" placeholder="Search here..." style="font-size: 1rem;">
+        </mat-form-field>
+
+    </mat-toolbar-row>
+
+</mat-toolbar>
+<ng-template #noresults>
+    <div class="category">
+        No Categories
     </div>
-</div>
+</ng-template>
+
+
+
+
+
+
+
+
+<mat-toolbar color="accent" style="opacity: .5;">{{txt}}</mat-toolbar>
+
+<div *ngIf="showProds" class="prodShow">
+
+    <div *ngFor="let product of products" class="card ml-3" >
+        <img class="card-img-top" style="width: 100px" src="{{url + product.img}}" alt="{{product.prodname}}">
+        <div class="card-body">
+            <h5 class="card-title">{{product.prodname}}</h5>
+            <p class="card-text">Price: {{product.price}} ₪</p>
+        </div>
+        <div>
+            <button mat-raised-button color="accent" (click)="openModal(product); current = product.id">Modify</button>
+        </div>
+    </div>
+
 </div>
